# Wave-U-Net-Pytorch

./: audio_metrics.ipynb  classifier_mel_based.ipynb  predict.ipynb  predict.py  pyproject.toml  start-mlflow-server.sh  start_jupyter_lab.sh  start_remote_jupyter_lab.sh  train.ipynb  train.py
config/: config.yml  config_predict.yml  config_train.yml
data/: musdb.py
